gobmkida/g1/hashtable_partially_clear
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/hashtable_partially_clear/src/engine/cache.c:900:17: error: use of undeclared identifier 'pdfa'
routines[10] = &pdfa.name[70]; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/hashtable_partially_clear/src/engine/cache.c:901:17: error: use of undeclared identifier 'pdfa'
routines[11] = &pdfa.name[70]; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/hashtable_partially_clear/src/engine/cache.c:902:17: error: use of undeclared identifier 'pdfa'
routines[12] = &pdfa.name[70]; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/hashtable_partially_clear/src/engine/cache.c:903:17: error: use of undeclared identifier 'pdfa'
routines[13] = &pdfa.name[70]; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/hashtable_partially_clear/src/engine/cache.c:904:17: error: use of undeclared identifier 'pdfa'
routines[14] = &pdfa.name[70]; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/hashtable_partially_clear/src/engine/cache.c:905:17: error: use of undeclared identifier 'pdfa'
routines[15] = &pdfa.name[70]; 
                ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/hashtable_partially_clear/src/obj/1/cache.o] Error 1
